fix: optimize deployment configuration for production
- Server now uses tsx for direct TypeScript execution (no compilation needed)
- Updated CORS configuration to use CLIENT_URL environment variable
- Enhanced CORS with proper origin validation for production
- Simplified build process for faster deployments
- Uses index-minimal.ts with mock data for immediate functionality

--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index-minimal.ts",
     "dev:full": "tsx watch src/index.ts",
-    "build": "echo 'Skipping TypeScript build for deployment'",
-    "start": "node dist/index.js",
+    "build": "tsc",
+    "start": "tsx src/index-minimal.ts",
     "db:migrate": "tsx src/scripts/seed-database.ts",
     "db:seed": "tsx src/scripts/seed-database.ts",
     "db:reset": "tsx src/scripts/reset.ts",
