--- a/render.yaml
+++ b/render.yaml
@@ -4,14 +4,14 @@ services:
     env: node
     plan: free
     buildCommand: cd server && npm install
-    startCommand: cd server && npm run dev
+    startCommand: cd server && npm start
     envVars:
       - key: NODE_ENV
         value: production
       - key: PORT
         value: 10000
       - key: CLIENT_URL
-        value: https://your-vercel-app.vercel.app
+        value: https://fanclubz-version-2-0.vercel.app
       - key: JWT_SECRET
         generateValue: true
       - key: SUPABASE_URL
