--- a/server/package.json
+++ b/server/package.json
@@ -42,7 +42,8 @@
     "sharp": "^0.33.1",
     "nodemailer": "^6.9.7",
     "stripe": "^14.10.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "tsx": "^4.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -63,7 +64,6 @@
     "ts-jest": "^29.1.1",
     "supertest": "^6.3.3",
     "@types/supertest": "^6.0.2",
-    "tsx": "^4.6.2",
     "typescript": "^5.3.3"
   }
 }
