Connect frontend to live backend on Render

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,9 @@
     }
   ],
   "env": {
-    "VITE_API_URL": "@vite_api_url"
+    "VITE_API_URL": "https://fan-club-z.onrender.com",
+    "VITE_WS_URL": "wss://fan-club-z.onrender.com",
+    "VITE_ENVIRONMENT": "production",
+    "VITE_DEBUG": "false"
   }
 } 
