--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
-  "installCommand": "npm install",
   "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
   "env": {
     "VITE_API_URL": "https://fan-club-z.onrender.com",
     "VITE_WS_URL": "wss://fan-club-z.onrender.com",
