fix: move all Vite dependencies to main dependencies for Vercel

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,8 +19,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": false,
-    "noImplicitAny": false,
-    "skipLibCheck": true
+    "noImplicitAny": false
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
