--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "react-intersection-observer": "^9.5.3",
     "vite": "^5.0.10",
+    "vite-plugin-pwa": "^0.17.4",
     "@vitejs/plugin-react": "^4.2.1"
   },
   "devDependencies": {
@@ -55,8 +56,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
-    "typescript": "^5.3.3",
-    "vite-plugin-pwa": "^0.17.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
