--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
     "start": "node src/index-minimal.js",
     "db:migrate": "tsx src/scripts/seed-database.ts",
     "db:seed": "tsx src/scripts/seed-database.ts",
+    "db:create-users": "tsx src/scripts/create-test-users.ts",
+    "db:setup": "npm run db:create-users && npm run db:seed",
     "db:reset": "tsx src/scripts/reset.ts",
     "test": "jest",
     "test:watch": "jest --watch",
