--- a/server/package.json
+++ b/server/package.json
@@ -8,64 +8,62 @@
     "dev:full": "tsx watch src/index.ts",
     "build": "echo 'Skipping TypeScript build for deployment'",
     "start": "node src/index-minimal.js",
-    "db:migrate": "tsx src/scripts/seed-database.ts",
+    "db:migrate": "tsx src/scripts/migrate-database.ts",
     "db:seed": "tsx src/scripts/seed-database.ts",
     "db:create-users": "tsx src/scripts/create-test-users.ts",
-    "db:setup": "npm run db:create-users && npm run db:seed",
+    "db:setup": "tsx src/scripts/setup-database.ts",
     "db:reset": "tsx src/scripts/reset.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "test:supabase": "tsx src/scripts/test-supabase.ts",
-    "db:migrate": "tsx src/scripts/migrate-database.ts",
-    "db:setup": "tsx src/scripts/setup-database.ts"
+    "test:supabase": "tsx src/scripts/test-supabase.ts"
   },
   "dependencies": {
     "@fanclubz/shared": "file:../shared",
-    "@supabase/supabase-js": "^2.38.5",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
+    "@supabase/supabase-js": "^2.53.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "joi": "^17.11.0",
-    "zod": "^3.22.4",
-    "socket.io": "^4.7.4",
     "bull": "^4.12.0",
-    "redis": "^4.6.11",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.1",
-    "nodemailer": "^6.9.7",
-    "stripe": "^14.10.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "tsx": "^4.6.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.7",
+    "redis": "^4.6.11",
+    "sharp": "^0.33.1",
+    "socket.io": "^4.7.4",
+    "stripe": "^14.10.0",
+    "tsx": "^4.6.2",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.10.5",
-    "@types/uuid": "^9.0.7",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.5",
     "@types/nodemailer": "^6.4.14",
+    "@types/supertest": "^6.0.2",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11",
-    "ts-jest": "^29.1.1",
     "supertest": "^6.3.3",
-    "@types/supertest": "^6.0.2",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
 }
