fix: critical backend API endpoints and CORS configuration
Backend API Fixes:
- Added missing /api/v2/clubs endpoints to JavaScript server
- Fixed CORS configuration to include correct Vercel URL
- Added club creation, joining, and fetching endpoints
- Updated render.yaml with correct CLIENT_URL

API Endpoints Added:
- GET /api/v2/clubs - Fetch all clubs with filtering
- GET /api/v2/clubs/:id - Fetch specific club
- POST /api/v2/clubs - Create new club
- POST /api/v2/clubs/:id/join - Join club
- POST /api/v2/clubs/:id/leave - Leave club

Mock Data:
- Server now properly serves mock clubs data
- Club creation adds to mock data array
- Join/leave functionality updates mock data

CORS Configuration:
- Added https://fan-club-z.vercel.app to allowed origins
- Fixed render.yaml CLIENT_URL to match actual Vercel URL

This fixes:
1. ✅ 404 errors for club creation and fetching
2. ✅ 'API endpoint not found' responses
3. ✅ Clubs now appear in list (2 mock clubs available)
4. ✅ Club creation now works properly
5. ✅ Join/leave functionality works
6. ✅ No need to seed data again - mock data is served

--- a/render.yaml
+++ b/render.yaml
@@ -11,7 +11,7 @@ services:
       - key: PORT
         value: 10000
       - key: CLIENT_URL
-        value: https://fanclubz-version-2-0.vercel.app
+        value: https://fan-club-z.vercel.app
       - key: JWT_SECRET
         generateValue: true
       - key: SUPABASE_URL
