fix: comprehensive club details UI/UX improvements and discussion simplification
UI/UX Fixes:
- ✅ Fixed Club Details header background (solid white, no transparency)
- ✅ Removed duplicate Create Prediction button (kept one functional)
- ✅ Simplified discussion system to one thread per club
- ✅ Added missing discussion API endpoints to backend
- ✅ Improved navigation consistency

Backend API Fixes:
- Added POST /api/v2/clubs/:id/discussions endpoint
- Added GET /api/v2/clubs/:id/discussions endpoint
- Fixed 404 error for discussion creation
- Updated available endpoints list

Discussion System Simplification:
- Changed from multiple discussions to single 'Club Chat' thread
- Removed discussion creation complexity
- Simplified UX with 'Join Chat' instead of 'Start Discussion'
- Eliminated need for discussion creation form

Create Prediction Functionality:
- Removed duplicate button from predictions tab
- Kept single functional button in club actions
- Both buttons now properly navigate to /create-prediction

This resolves:
1. ✅ Header transparency issue when scrolling
2. ✅ Discussion creation 404 errors
3. ✅ Duplicate navigation options
4. ✅ Duplicate Create Prediction buttons
5. ✅ Simplified discussion UX per user request

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "client",
     "server",
     "shared"
-  ],  "scripts": {
+  ],
+  "scripts": {
     "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
     "dev:client": "cd client && npm run dev",
     "dev:server": "cd server && npm run dev",
@@ -34,9 +35,13 @@
     "check-build": "node check-build.js",
     "restart-dev": "bash restart-dev.sh",
     "vercel-build": "cd client && npm install && npm run build",
-    "deploy:staging": "git push origin development",
-    "deploy:prod": "git push origin main",
+    "deploy:dev": "bash deploy-dev.sh",
+    "deploy:staging": "bash deploy-staging.sh",
+    "deploy:production": "bash deploy-production.sh",
+    "deploy:legacy": "git push origin development",
+    "deploy:prod:legacy": "git push origin main",
     "setup:dev": "git checkout development && npm run install:all",
+    "setup:branches": "git checkout -b main && git push -u origin main && git checkout -b staging && git push -u origin staging && git checkout development",
     "test:build": "npm run build && npm run check-build",
     "preview": "cd client && npm run preview"
   },
