--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "version:bump": "node scripts/version-bump.js",
     "version:patch": "node scripts/version-bump.js patch",
     "version:minor": "node scripts/version-bump.js minor",
-    "version:major": "node scripts/version-bump.js major"
+    "version:major": "node scripts/version-bump.js major",
+    "version:verify": "node scripts/verify-versions.js"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
