FIX: API endpoints and profile page errors - Added working predictions API endpoints (/api/v2/predictions, /api/v2/predictions/stats/platform) - Fixed profile page ReferenceError: user is not defined (changed to currentUser) - Updated tsconfig.json to exclude services directory from compilation - Server now provides proper API responses for frontend

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -33,6 +33,7 @@
     "dist", 
     "**/*.test.ts",
     "../shared/src/**/*",
-    "src/disabled/**/*"
+    "src/disabled/**/*",
+    "src/services/**/*"
   ]
 }
