--- a/client/package.json
+++ b/client/package.json
@@ -46,9 +46,9 @@
     "@radix-ui/react-toast": "^1.1.5",
     "react-intersection-observer": "^9.5.3",
     "socket.io-client": "^4.7.4",
-    "vite": "^5.0.10",
+    "vite": "^4.5.2",
     "vite-plugin-pwa": "^0.17.4",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32"
   },
@@ -63,7 +63,7 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": "18.x",
+    "node": ">=18.0.0",
     "npm": ">=9.0.0"
   },
   "overrides": {
