--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,11 @@
 {
   "version": 2,
   "buildCommand": "cd client && npm install && npm run build",
+  "build": {
+    "env": {
+      "NODE_VERSION": "18"
+    }
+  }
   "outputDirectory": "client/dist",
   "installCommand": "npm install --prefix client",
   "rewrites": [
