FIX: Comprehensive Vercel deployment fix with custom build script
🔧 COMPREHENSIVE DEPLOYMENT FIXES:
- Created custom build.sh script to handle Node.js version and dependency issues
- Updated Vercel configuration to use custom build script
- Added .npmrc with legacy-peer-deps and engine-strict=false
- Downgraded Vite to 4.4.9 for better stability
- Updated Vite config to use esbuild minification
- Added specific Node.js version (18.19.0) in Vercel environment
- Fixed package.json syntax and indentation issues

✅ This should resolve the Rollup dependency issue and Node.js version conflicts
✅ Custom build script ensures proper environment setup
✅ Vercel deployment should now build successfully

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm install && npm run build",
+  "buildCommand": "cd client && ./build.sh",
   "build": {
     "env": {
-      "NODE_VERSION": "18"
+      "NODE_VERSION": "18.19.0"
     }
   },
   "outputDirectory": "client/dist",
