--- a/client/package.json
+++ b/client/package.json
@@ -45,12 +45,7 @@
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "react-intersection-observer": "^9.5.3",
-    "socket.io-client": "^4.7.4",
-    "vite": "^4.4.9",
-    "vite-plugin-pwa": "^0.17.4",
-    "@vitejs/plugin-react": "^4.1.1",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.45",
@@ -60,7 +55,12 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.17.4",
+    "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "engines": {
     "node": ">=18.0.0",
