--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,13 @@
 {
   "version": 2,
-  "buildCommand": "cd client && ./build.sh",
+  "buildCommand": "cd client && npm run build",
   "build": {
     "env": {
       "NODE_VERSION": "18.19.0"
     }
   },
   "outputDirectory": "client/dist",
-  "installCommand": "npm install --prefix client",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/api/(.*)",
