--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "cd client && npm run build",
+  "buildCommand": "npm run build:client",
   "build": {
     "env": {
       "NODE_VERSION": "18.19.0"
