fix: resolve Vercel 'vite: command not found' deployment error
- Move Vite and related build tools to root devDependencies for proper hoisting
- Update workspace scripts to use npm workspace commands
- Optimize Vercel configuration for monorepo deployment
- Add .npmrc with workspace-specific settings
- Clean client package.json devDependencies to avoid conflicts

--- a/package.json
+++ b/package.json
@@ -10,24 +10,24 @@
   ],
   "scripts": {
     "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
-    "dev:client": "cd client && npm run dev",
-    "dev:server": "cd server && npm run dev",
-    "build": "npm run build:shared && npm run build:client && npm run build:server",
-    "build:shared": "cd shared && npm run build",
-    "build:client": "cd client && npm run build",
-    "build:server": "cd server && npm run build",
-    "install:all": "npm install && cd client && npm install && cd ../server && npm install && cd ../shared && npm install",
+    "dev:client": "npm run dev --workspace=@fanclubz/client",
+    "dev:server": "npm run dev --workspace=@fanclubz/server",
+    "build": "npm run build --workspaces --if-present",
+    "build:shared": "npm run build --workspace=@fanclubz/shared",
+    "build:client": "npm run build --workspace=@fanclubz/client",
+    "build:server": "npm run build --workspace=@fanclubz/server",
+    "install:all": "npm install",
     "clean": "rm -rf node_modules client/node_modules server/node_modules shared/node_modules",
-    "test": "npm run test:client && npm run test:server",
-    "test:client": "cd client && npm test",
-    "test:server": "cd server && npm test",
-    "lint": "npm run lint:client && npm run lint:server",
-    "lint:client": "cd client && npm run lint",
-    "lint:server": "cd server && npm run lint",
-    "db:setup": "cd server && npm run db:setup",
-    "db:migrate": "cd server && npm run db:migrate",
-    "db:seed": "cd server && npm run db:seed",
-    "test:supabase": "cd server && npm run test:supabase",
+    "test": "npm run test --workspaces --if-present",
+    "test:client": "npm run test --workspace=@fanclubz/client",
+    "test:server": "npm run test --workspace=@fanclubz/server",
+    "lint": "npm run lint --workspaces --if-present",
+    "lint:client": "npm run lint --workspace=@fanclubz/client",
+    "lint:server": "npm run lint --workspace=@fanclubz/server",
+    "db:setup": "npm run db:setup --workspace=@fanclubz/server",
+    "db:migrate": "npm run db:migrate --workspace=@fanclubz/server",
+    "db:seed": "npm run db:seed --workspace=@fanclubz/server",
+    "test:supabase": "npm run test:supabase --workspace=@fanclubz/server",
     "git:status": "git status",
     "save-work": "git add . && git commit -m \"feat: work in progress - $(date '+%Y-%m-%d %H:%M:%S')\"",
     "push-changes": "git push origin main",
@@ -42,7 +42,12 @@
     "version:verify": "node scripts/verify-versions.js"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "vite": "^4.4.9",
+    "@vitejs/plugin-react": "^4.1.1",
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18"
   },
   "engines": {
     "node": ">=18.0.0",
