--- a/client/package.json
+++ b/client/package.json
@@ -50,12 +50,17 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "@vitejs/plugin-react": "^4.1.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite-plugin-pwa": "^0.17.4",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "typescript": "^5.3.3",
+    "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.17.4"
   },
   "engines": {
     "node": ">=18.0.0",
