--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "installCommand": "npm ci",
-  "buildCommand": "npm run build:client",
+  "buildCommand": "npm run build:shared && npm run build:client",
   "outputDirectory": "client/dist",
   "build": {
     "env": {
