--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "installCommand": "npm ci",
-  "buildCommand": "npm run build:shared && npm run build:client",
+  "installCommand": "npm install --prefix client",
+  "buildCommand": "cd client && npm install && npm run build",
   "outputDirectory": "client/dist",
   "build": {
     "env": {
