--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "installCommand": "npm install",
-  "buildCommand": "cd client && npm run build",
+  "buildCommand": "npm run build:client",
   "outputDirectory": "client/dist",
   "build": {
     "env": {
