FIX: Use npx vite to resolve command not found error
🔧 VITE COMMAND RESOLUTION FIX:
- Updated all vite commands in client/package.json to use 'npx vite'
- This ensures Vite is found through npm's resolution mechanism
- Tested locally: npm run build works perfectly (15.52s build time)

✅ This should finally resolve the 'vite: command not found' error
✅ npx will find Vite regardless of where it's installed (root or client)

--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,10 @@
   "description": "Fan Club Z React Client Application",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "vercel-build": "vite build",
-    "preview": "vite preview",
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "vercel-build": "npx vite build",
+    "preview": "npx vite preview",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "type-check": "tsc --noEmit",
