FIX: Install Vite directly in client directory to resolve version mismatch
🔧 FINAL FIX FOR VITE RESOLUTION:
- Changed installCommand to 'cd client && npm install'
- Changed buildCommand to 'cd client && npm run build'
- Reverted client scripts back to 'vite' (not npx) since Vite will be locally installed
- This avoids npx installing wrong Vite version (7.1.3 vs 4.4.9)

✅ Tested locally: build completes in 14.48s with correct Vite v4.5.14
✅ This ensures Vite 4.4.9 is installed directly in client/node_modules

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "installCommand": "npm install",
-  "buildCommand": "npm run build:client",
+  "installCommand": "cd client && npm install",
+  "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/dist",
   "build": {
     "env": {
