--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "installCommand": "cd client && npm install",
+  "installCommand": "cd client && npm install --no-workspaces",
   "buildCommand": "cd client && npm run build",
   "outputDirectory": "client/dist",
   "build": {
