--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fanclubz/server",
-  "version": "2.0.63",
+  "version": "2.0.64",
   "description": "Fan Club Z API Server",
   "main": "dist/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   "dependencies": {
     "@fanclubz/shared": "file:../shared",
     "@supabase/supabase-js": "^2.53.0",
+    "axios": "^1.11.0",
     "bcryptjs": "^2.4.3",
     "bull": "^4.12.0",
     "compression": "^1.7.4",
