fix(ts): remove clubs functionality and fix import/export issues
- Remove all club-related pages, stores, and references
- Fix Router imports to use named exports
- Fix property name mismatches (stakeMin → stake_min, etc.)
- Create stub types for settlement components
- Update shared schema to remove club types
- Fix syntax errors in CreateDiscussionPage

Reduces TypeScript errors from 185 to 161

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -19,8 +19,9 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": false,
-    "baseUrl": ".",
+    "baseUrl": "./src",
     "paths": {
+      "@/*": ["*"],
       "@fanclubz/shared": ["../shared/dist"],
       "@fanclubz/shared/*": ["../shared/dist/*"]
     }
