--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,6 +14,12 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path mapping */
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    },
+
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
