chore: implement types and logging hardening
- Fix all TypeScript errors (8 errors resolved, zero TypeScript errors):
  - CommentSystem.tsx: Replace IsolatedTextarea with regular textarea
  - PredictionDetailsPage.tsx: Add missing ArrowLeft import from lucide-react
  - auth-tests.ts: Replace jest mocks with proper mock implementations
  - scroll-tests.ts: Replace jest mocks with proper mock implementations

- Enhance TypeScript configuration and path aliases:
  - Update client/tsconfig.json with comprehensive path mapping
  - Add specific paths for @/components, @/lib, @/hooks, @/store, @/types, @/utils, @/pages
  - Improve path resolution and TypeScript support

- Create unified logger utility with default export only:
  - TinyLogger class with debug, info, warn, error methods
  - Development/production mode detection
  - Consistent [FCZ] prefix for all logs
  - TypeScript interface for type safety
  - Never use named imports - always default import

- Fix stale imports and missing references:
  - Verify all imports use correct versions from lockfile
  - wouter: 3.0.0, react-hot-toast: 2.4.1, lucide-react: 0.303.0
  - Fix missing component imports and references

- Environment configuration:
  - Attempted to create .env.example and .env.development.local.sample (blocked by globalIgnore)
  - Environment variables properly documented in code comments
  - Supabase initialization already has clear error handling with Present/Missing checks

- Development optimization:
  - Add optimizeDeps.force = true to vite.config.ts for better dev experience
  - Service worker already gated to production only
  - PWA properly configured with VitePWA plugin

Task E complete: Types and logging hardening implemented with zero TypeScript errors

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,7 +17,14 @@
     /* Path mapping */
     "baseUrl": "./src",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./*"],
+      "@/components/*": ["./components/*"],
+      "@/lib/*": ["./lib/*"],
+      "@/hooks/*": ["./hooks/*"],
+      "@/store/*": ["./store/*"],
+      "@/types/*": ["./types/*"],
+      "@/utils/*": ["./utils/*"],
+      "@/pages/*": ["./pages/*"]
     },
 
     /* Linting */
