chore: implement release hygiene with branch model, scripts, and PR template
- Document comprehensive branch model in docs/BRANCH_MODEL.md:
  - Main (protected), develop (integration), feature/*, hotfix/*, release/vX.Y.Z
  - Branch protection rules and workflow documentation
  - Naming conventions, best practices, and emergency procedures
  - Clear guidelines for feature development, hotfixes, and releases

- Fix hardcoded versions to use package.json only:
  - shared/src/version.ts: Now reads version dynamically from package.json
  - client/public/version.json: Generated dynamically via script
  - client/src/utils/pwa.ts: Removed hardcoded fallback version
  - Created scripts/get-version.js utility for reading versions
  - Created scripts/generate-version-json.js for dynamic version.json generation

- Add missing scripts to root package.json:
  - typecheck: Runs client TypeScript type checking
  - smoke:staging: Runs staging smoke tests
  - smoke:prod: Runs production smoke tests
  - All required scripts now available: lint, typecheck, test, build, smoke:staging, smoke:prod

- Create comprehensive PR template in .github/pull_request_template.md:
  - Type of change selection and related issues
  - Testing checklist with typecheck, tests, screenshots, artifacts
  - Security and performance considerations
  - Deployment notes and documentation updates
  - Reviewer guidelines and merge instructions
  - Standardized PR process with quality gates

- Add production smoke test script:
  - e2e/smoke.production.mjs: Health checks for production deployment
  - Tests home page load, API health, static assets, and console errors
  - Provides success rate and detailed failure reporting

- Ensure lockfiles are committed:
  - Verified pnpm-lock.yaml, package-lock.json, and landing-page/pnpm-lock.yaml
  - All lockfiles properly tracked for reproducible builds

Task F1 complete: Release hygiene implemented with branch model, dynamic versions, required scripts, and PR template

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lint": "npm run lint --workspaces --if-present",
     "lint:client": "npm run lint --workspace=@fanclubz/client",
     "lint:server": "npm run lint --workspace=@fanclubz/server",
+    "typecheck": "npm run type-check --workspace=@fanclubz/client",
     "db:setup": "npm run db:setup --workspace=@fanclubz/server",
     "db:migrate": "npm run db:migrate --workspace=@fanclubz/server",
     "db:seed": "npm run db:seed --workspace=@fanclubz/server",
@@ -39,7 +40,9 @@
     "version:patch": "node scripts/version-bump.js patch",
     "version:minor": "node scripts/version-bump.js minor",
     "version:major": "node scripts/version-bump.js major",
-    "version:verify": "node scripts/verify-versions.js"
+    "version:verify": "node scripts/verify-versions.js",
+    "smoke:staging": "node e2e/smoke.staging.mjs",
+    "smoke:prod": "node e2e/smoke.production.mjs"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
