chore(step 2): Duplicate files cleanup and project standardization
- Created PROJECT_MAP.md defining canonical sources
- Added check-duplicates.mjs script with CI integration
- Set up TypeScript path aliases (@pages, @components, etc.)
- Updated Vite config with matching aliases
- Created icons/index.ts as single icon registry
- Updated preflight to include duplicate checking
- No duplicate files found - structure is clean

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -14,6 +14,18 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": "src",
+    "paths": {
+      "@pages/*": ["pages/*"],
+      "@components/*": ["components/*"],
+      "@icons/*": ["icons/*"],
+      "@auth/*": ["auth/*"],
+      "@stores/*": ["stores/*"],
+      "@config/*": ["config/*"],
+      "@utils/*": ["utils/*"]
+    },
+
     /* Linting */
     "strict": false,
     "noUnusedLocals": false,
