--- a/client/package.json
+++ b/client/package.json
@@ -10,14 +10,15 @@
     "lint": "eslint .",
     "build": "vite build",
     "preview": "vite preview --port 5175",
-    "preflight": "pnpm clean && pnpm lint && pnpm typecheck && pnpm build",
+    "preflight": "pnpm clean && pnpm lint && pnpm typecheck && pnpm check:dupes && pnpm build",
     "vercel-build": "vite build",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "type-check": "tsc --noEmit",
     "env:check": "ts-node --transpile-only ../scripts/check-env.ts",
     "generate-icons": "bash ../generate-pwa-icons.sh",
     "pwa-audit": "lighthouse --view --chrome-flags='--headless' --only-categories=pwa http://localhost:5173",
-    "check-manifest": "node -e \"console.log('Checking manifest...'); fetch('http://localhost:5173/manifest.json').then(r=>r.json()).then(console.log).catch(console.error)\""
+    "check-manifest": "node -e \"console.log('Checking manifest...'); fetch('http://localhost:5173/manifest.json').then(r=>r.json()).then(console.log).catch(console.error)\"",
+    "check:dupes": "node scripts/check-duplicates.mjs"
   },
   "dependencies": {
     "@fanclubz/shared": "file:../shared",
@@ -63,11 +64,12 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globby": "^13.2.2",
     "postcss": "^8.4.32",
+    "rimraf": "^3.0.2",
     "typescript": "^5.3.3",
     "vite": "^4.4.9",
-    "vite-plugin-pwa": "^0.17.4",
-    "rimraf": "^3.0.2"
+    "vite-plugin-pwa": "^0.17.4"
   },
   "engines": {
     "node": ">=18.0.0",
