--- a/client/package.json
+++ b/client/package.json
@@ -5,59 +5,67 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "clean": "rimraf dist .turbo .vite .cache",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "lint": "eslint .",
     "build": "vite build",
+    "preview": "vite preview --port 5175",
+    "preflight": "pnpm clean && pnpm lint && pnpm typecheck && pnpm check:dupes && pnpm build",
     "vercel-build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "type-check": "tsc --noEmit",
+    "env:check": "ts-node --transpile-only ../scripts/check-env.ts",
     "generate-icons": "bash ../generate-pwa-icons.sh",
     "pwa-audit": "lighthouse --view --chrome-flags='--headless' --only-categories=pwa http://localhost:5173",
-    "check-manifest": "node -e \"console.log('Checking manifest...'); fetch('http://localhost:5173/manifest.json').then(r=>r.json()).then(console.log).catch(console.error)\""
+    "check-manifest": "node -e \"console.log('Checking manifest...'); fetch('http://localhost:5173/manifest.json').then(r=>r.json()).then(console.log).catch(console.error)\"",
+    "check:dupes": "node scripts/check-duplicates.mjs"
   },
   "dependencies": {
-    "@fanclubz/shared": "file:../shared",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@supabase/supabase-js": "^2.39.1",
-    "zustand": "^4.4.7",
-    "@tanstack/react-query": "^5.14.2",
-    "wouter": "^3.0.0",
-    "framer-motion": "^10.16.16",
-    "tailwindcss": "^3.4.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
-    "lucide-react": "^0.303.0",
-    "react-hot-toast": "^2.4.1",
-    "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "date-fns": "^3.0.6",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.2.0",
-    "class-variance-authority": "^0.7.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
+    "@supabase/supabase-js": "^2.39.1",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
+    "@tanstack/react-query": "^5.14.2",
+    "@types/react-router-dom": "^5.3.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.303.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.5.3",
-    "socket.io-client": "^4.7.4"
+    "react-router-dom": "^7.9.1",
+    "socket.io-client": "^4.7.4",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.0",
+    "wouter": "^3.0.0",
+    "zod": "^3.25.76",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.16.0",
-    "@typescript-eslint/parser": "^6.16.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
     "@vitejs/plugin-react": "^4.1.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "globby": "^13.2.2",
     "postcss": "^8.4.32",
+    "rimraf": "^3.0.2",
     "typescript": "^5.3.3",
     "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.17.4"
