fix(deploy): correct Vercel build configuration for client app
❌ Previous: Building from root with workspace build (wrong output)
✅ Fixed: Build specifically from client directory
✅ Output: client/dist (correct FCZ app build)
✅ Should now deploy the actual FCZ application instead of fallback

Build Command: cd client && pnpm install --frozen-lockfile && pnpm build
Output Directory: client/dist

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
-  "buildCommand": "pnpm install --frozen-lockfile && pnpm build",
-  "outputDirectory": "dist",
+  "buildCommand": "cd client && pnpm install --frozen-lockfile && pnpm build",
+  "outputDirectory": "client/dist",
   "installCommand": "pnpm install --frozen-lockfile",
   "framework": "vite",
   "rewrites": [
