feat: consolidate formatters and fix build configuration
- Create canonical format.ts in client/src/lib/ with unified formatters
- Remove duplicate formatters.ts files (utils/ and lib/)
- Update all imports to use @lib/format path alias
- Configure tsconfig.json and vite.config.ts with @lib/* path aliases
- Fix Vercel build configuration to resolve vite command not found
- Test build successfully with consolidated formatters

This eliminates duplicate/competing files and ensures single source of truth
for number, currency, and time formatting across the application.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -17,8 +17,9 @@
     /* Path aliases */
     "baseUrl": "src",
     "paths": {
-      "@pages/*": ["pages/*"],
+      "@lib/*": ["lib/*"],
       "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
       "@icons/*": ["icons/*"],
       "@auth/*": ["auth/*"],
       "@stores/*": ["stores/*"],
