--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
     "vite": "^4.4.9",
+    "vite-plugin-pwa": "^0.17.4",
     "wouter": "^3.0.0",
     "zod": "^3.25.76",
     "zustand": "^4.4.7"
@@ -69,8 +70,7 @@
     "globby": "^13.2.2",
     "postcss": "^8.4.32",
     "rimraf": "^3.0.2",
-    "typescript": "^5.3.3",
-    "vite-plugin-pwa": "^0.17.4"
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
