--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,9 @@
     "vite-plugin-pwa": "^0.17.4",
     "wouter": "^3.0.0",
     "zod": "^3.25.76",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
@@ -63,12 +65,10 @@
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "globby": "^13.2.2",
-    "postcss": "^8.4.32",
     "rimraf": "^3.0.2",
     "typescript": "^5.3.3"
   },
