STABLE STATE - Last working version before any changes
This commit represents the last stable state of the application with all fixes working correctly:

- Live Markets Count: 12 active predictions (correct)
- Volume Calculation: 7470.00 (only active predictions)
- Balance Reporting: getBalance(USD) working correctly
- Place Bet Button: positioned bottom-16 (above navigation)
- Onboarding Tutorial: updated to match current UI/UX

Server logs show:
- activePredictions: 12
- totalVolume: 7470.00
- totalUsers: 7

All local development services running correctly on:
- Backend: http://localhost:3001
- Frontend: http://localhost:5174

DO NOT MODIFY THIS BUILD UNLESS EXPLICITLY REQUESTED

--- a/client/.env
+++ b/client/.env
@@ -3,6 +3,7 @@ VITE_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFz
 VITE_API_BASE=/api
 
 # Media system configuration
+VITE_MEDIA_ENDPOINT=/media/search
 VITE_MEDIA_UNSPLASH_KEY=KoLAbON534ZA8GNcNdZGTEoDtNBarlgJArGSokyuGkI
 VITE_MEDIA_PEXELS_KEY=MNVZGjhI06B65Il9QFX2GVU9D3nHftQzMZhMcWVNICUQtrKYbf4JoSKf
 VITE_DEBUG_LOGS=true
