--- a/client/.env.example
+++ b/client/.env.example
@@ -32,3 +32,14 @@ VITE_API_BASE=/api
 # Image Feature Configuration
 VITE_IMAGES_PROVIDER=none
 VITE_IMAGES_FEATURE_FLAG=false
+
+# Media Proxy Configuration (for Pexels/Unsplash)
+VITE_MEDIA_ENDPOINT=/media/search
+# Note: API keys should be set in Vercel Environment Variables:
+# - PEXELS_API_KEY
+# - UNSPLASH_ACCESS_KEY
+
+# Prediction Media Solution (NEW)
+# The media endpoint uses your existing /media/search proxy
+# Images are cached in Supabase table: prediction_media
+# See: src/lib/media/IMPLEMENTATION_GUIDE.md for setup
