--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "check:dupes": "node scripts/check-duplicates.mjs"
   },
   "dependencies": {
+    "@coinbase/wallet-sdk": "^4.3.7",
     "@fanclubz/shared": "file:../shared",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -37,11 +38,17 @@
     "@tanstack/react-query": "^5.14.2",
     "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react": "^4.1.1",
+    "@wagmi/connectors": "^5.11.2",
+    "@wagmi/core": "^2.22.1",
+    "@walletconnect/ethereum-provider": "^2.23.0",
+    "@walletconnect/modal": "^2.7.0",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
+    "postcss": "^8.4.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
@@ -51,13 +58,14 @@
     "socket.io-client": "^4.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.0",
+    "uuid": "^13.0.0",
+    "viem": "^2.38.6",
     "vite": "^4.4.9",
     "vite-plugin-pwa": "^0.17.4",
+    "wagmi": "^2.19.2",
     "wouter": "^3.0.0",
     "zod": "^3.25.76",
-    "zustand": "^4.4.7",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^24.5.2",
