--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "build": "npm run build:shared && npm run build:server",
     "build:shared": "cd ../shared && npm run build",
     "build:server": "tsc",
+    "typecheck": "tsc --noEmit",
     "start": "node dist/index.js",
     "db:migrate": "tsx src/scripts/migrate-database.ts",
     "db:seed": "tsx src/scripts/seed-database.ts",
@@ -18,7 +19,12 @@
     "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "test:supabase": "tsx src/scripts/test-supabase.ts"
+    "test:supabase": "tsx src/scripts/test-supabase.ts",
+    "db:connect": "tsx scripts/db-connect.ts",
+    "db:migrate-file": "tsx scripts/run-migration.ts",
+    "db:query": "tsx scripts/db-query.ts",
+    "db:inspect": "tsx scripts/inspect-db.ts",
+    "db:migrate-supabase": "tsx scripts/run-migrations-supabase.ts"
   },
   "dependencies": {
     "@fanclubz/shared": "file:../shared",
