--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "socket.io": "^4.7.4",
     "stripe": "^14.10.0",
     "uuid": "^9.0.1",
+    "viem": "^2.21.0",
     "winston": "^3.11.0",
     "zod": "^3.22.4"
   },
