feat: stable release - OAuth fix + onboarding tour + image enrichment + back navigation
✅ PRIORITY FIXES COMPLETED:
- Fixed double login OAuth issue by handling SIGNED_IN events properly
- Streamlined onboarding tour to 5 essential steps with screen navigation
- Enhanced image query builder with contextual theme rules for all keywords
- Fixed back navigation to remember origin page (Discover/Bets/Wallet)

🔐 OAuth / Authentication:
- Auth state listener now properly handles SIGNED_IN events from OAuth callbacks
- Prevents duplicate state updates with user ID comparison
- Maintains deduplication to avoid rapid-fire events
- Users no longer need to sign in twice after OAuth redirect

🎯 Onboarding Tour:
- Reduced from 18 to 5 critical steps (Welcome → Discover → Create → Bets → Wallet)
- Added onNext callbacks for automatic screen navigation
- Added data-tour and data-tour-id attributes across all components
- Tour now flows contextually through app screens
- Removed unimportant steps (search, filters, profile details)

🖼️ Image Contextual Relevance:
- Implemented theme-based keyword enrichment engine (gaming, sports, politics, etc.)
- Added THEME_RULES array with regex patterns for 13 major categories
- Enhanced buildImageQuery to combine title keywords + category + theme enrichments
- Raised keyword cap to 8 for richer queries
- Images now highly contextual for all prediction types, not just gaming

🔙 Back Navigation:
- Prediction cards now pass state.from to remember origin page
- Detail screens preserve and honor the returnTo path
- Back button navigates to correct page instead of defaulting to Bets
- Works across Discover, My Bets, Wallet claim views

📦 Technical Improvements:
- StableImageProvider with multi-layer caching (memory + IndexedDB)
- Fallback chain: Pexels → Unsplash → Gradient
- Stable, non-flickering images
- Created contextualOnboardingTours.tsx for tour definitions

--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,9 @@
     "check:dupes": "node scripts/check-duplicates.mjs"
   },
   "dependencies": {
+    "@capacitor/app": "^7.0.0",
+    "@capacitor/browser": "^7.0.0",
+    "@capacitor/core": "^7.4.4",
     "@coinbase/wallet-sdk": "^4.3.7",
     "@fanclubz/shared": "file:../shared",
     "@hookform/resolvers": "^3.3.2",
@@ -70,6 +73,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/cli": "^7.4.4",
     "@types/node": "^24.5.2",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
