--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,7 +1,7 @@
 {
-  "buildCommand": "cd .. && npm install && cd client && npm run build",
+  "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "installCommand": "cd .. && npm install && cd client && npm install",
+  "installCommand": "npm install",
   "rewrites": [
     {
       "source": "/media/search",
